Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   .env
	modified:   .gitignore
	modified:   Makefile
	new file:   cmd/email.go
	modified:   docs/docs.go
	modified:   docs/swagger.json
	modified:   docs/swagger.yaml
	modified:   go.mod
	modified:   go.sum
	modified:   internal/delivery/http/v1/handler.go
	modified:   internal/delivery/http/v1/router.go
	modified:   internal/models/user.go
	modified:   internal/repository/auth.go
	modified:   internal/repository/interfaces.go
	modified:   internal/service/auth.go
	modified:   internal/service/interfaces.go
	modified:   migrations/000001_init.up.sql
